# chia-plot-sink

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make_devel.sh  make_msvc.bat  make_release.sh
.github/workflows/: build_windows.yml
include/: stdiox.hpp
src/: chia_plot_copy.cpp  chia_plot_sink.cpp
